[package]
name = "ibc-elc-client-cw"
version = "0.1.0"
edition = "2021"

[dependencies]
cosmwasm-schema = "2.2.1"
cosmwasm-std = "2.2.1"
cw-storage-plus = "2.0.0"
prost = { version = "0.11", default-features = false, features = ["prost-derive"] }
ibc = { version = "0.29.0", default-features = false, features = ["serde"] }
derive_more = { version = "1.0", default-features = false, features = ["display"] }

light-client = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.12", default-features = false, features = ["ibc"] }
store = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.12", default-features = false }