[package]
name = "ibc-ethereum-client-cw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib", "rlib" ]

[dependencies]
cosmwasm-std = "2.2.1"
ethereum-elc = { git = "https://github.com/datachainlab/ethereum-elc", version = "0.1.0", default-features = false }
ibc = { version = "0.29.0", default-features = false, features = ["serde"] }
ibc-elc-client-cw = { version = "0.1.0", path = "../ibc-elc-client-cw" }
light-client = { git = "https://github.com/datachainlab/lcp", rev = "v0.2.12", version = "0.1.0", default-features = false, features = ["ibc"] }

[features]
default = ["minimal"]
minimal = []
